# Game-Engine-2023

./: .gitignore  CMakeLists.txt  S23_Game.sln  unique.txt
AEngine/: AEngine.vcxproj  AEngine.vcxproj.filters  CMakeLists.txt
AEngine/include/: AEngine.h  pch.h
AEngine/src/: AEngineApp.cpp  AEngineApp.h  AEngineEvents.cpp  AEngineEvents.h  AEngineKeys.h  AEngineUtil.h  GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
AEngine/src/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
AEngine/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Assets/Shaders/: DefaultVertexShader.glsl
S23_Game/: CMakeLists.txt  S23_Game.vcxproj  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
